@@ -1,5 +1,11 @@
 Revision history for libev, a high-performance and full-featured event loop.
 
+        - actually verify that local and remote port are matching in
+          libev's socketpair emulation, which makes denial-of-service
+          attacks harder (but not impossible - it's windows). Make sure
+          it even works under vista, which thinks that getpeername should
+          return some fantasy port number.
+
 3.51 Wed Dec 24 23:00:11 CET 2008
         - fix a bug where an inotify watcher was added twice, causing
           freezes on hash collisions (reported and analysed by Graham Leggett).
